k3s/ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: legacy-ingress
  namespace: edge
spec:
  rules:
  - host: legacy.local
    http:
      paths:
      - backend:
          service:
            name: legacy
            port:
              number: 80
        path: /
        pathType: Prefix
